--- a/flashcards/src/app/app.component.html
+++ b/flashcards/src/app/app.component.html
@@ -1,12 +1,3 @@
-
-<div class="flashcard">
-  <div class="container">
-    <div class="prompt">
-      {{ prompt }}
-    </div>
-
-    <div class="answer">
-      {{ answer }}
-    </div>
-  </div>
+<div class="container">
+  <app-flashcards></app-flashcards>
 </div>
