Add translation model

--- a/flashcards/src/app/flashcards/flashcards.component.html
+++ b/flashcards/src/app/flashcards/flashcards.component.html
@@ -1,9 +1,9 @@
 <div class="flashcard">
   <div class="prompt">
-    {{ prompt }}
+    {{ translation.english }}
   </div>
 
   <div class="answer">
-    {{ answer }}
+    {{ translation.spanish }}
   </div>
 </div>
