Move date to typescript for the moment; Start hooking up basic front-end functionality; Need to refactor styles
...following another tutorial

https://angular.io/tutorial

--- a/flashcards/src/app/flashcards/flashcards.component.html
+++ b/flashcards/src/app/flashcards/flashcards.component.html
@@ -1,9 +1,11 @@
-<div class="flashcard">
-  <div class="prompt">
-    {{ translation.english }}
-  </div>
+<div class="flashcard" (click)=onAdvance(index)>
+  <div class="content">
+    <div class="prompt">
+      {{ currentTranslation.english }}
+    </div>
 
-  <div class="answer">
-    {{ translation.spanish }}
+    <div class="answer">
+      {{ currentTranslation.spanish }}
+    </div>
   </div>
 </div>
