Add keyboard event; Move click event to component only

--- a/flashcards/src/app/flashcards/flashcards.component.html
+++ b/flashcards/src/app/flashcards/flashcards.component.html
@@ -1,4 +1,4 @@
-<div class="flashcard" (click)=onAdvance(index)>
+<div class="flashcard">
   <div class="content">
     <div class="index">
       {{ index + 1 }} of {{ length }}
