Add maximum flashcards limit (hardcoded); Slight refactor; Typehint all the things

--- a/flashcards/src/app/flashcards/flashcards.component.html
+++ b/flashcards/src/app/flashcards/flashcards.component.html
@@ -1,7 +1,7 @@
 <div class="flashcard">
   <div class="content">
     <div class="index">
-      {{ index + 1 }} of {{ length }}
+      {{ index + 1 }} of {{ translations.length }}
     </div>
 
     <div class="translations">
