Add MD modal and components
...disable flashcard functionality and styles for the moment

--- a/flashcards/src/app/components/flashcards/flashcards.component.scss
+++ b/flashcards/src/app/components/flashcards/flashcards.component.scss
@@ -1,5 +1,5 @@
 .flashcard {
-  height: 100vh;
+  // height: 100vh;
 }
 
 .content {
@@ -9,9 +9,9 @@
   .translations {
     font-size: 5rem;
     line-height: 4rem;
-    position: absolute;
+    // position: absolute;
     text-align: center;
-    top: 40%;
+    // top: 40%;
     width: 100%;
   }
 
