Add MD icons; Remove MD buttons

--- a/flashcards/src/app/components/dialog/dialog.component.html
+++ b/flashcards/src/app/components/dialog/dialog.component.html
@@ -1,1 +1,1 @@
-<button mat-raised-button (click)="openDialog()">Options</button>
+<i class="material-icons md-48 md-dark md-clickable" (click)="openDialog()">settings</i>
