--- a/flashcards/src/styles.scss
+++ b/flashcards/src/styles.scss
@@ -4,3 +4,30 @@ body {
   background: #eee;
   font-size: 16px;
 }
+
+.material-icons {
+
+  &.md-18 {
+    font-size: 18px;
+  }
+
+  &.md-24 {
+    font-size: 24px;
+  }
+
+  &.md-36 {
+    font-size: 36px;
+  }
+
+  &.md-48 {
+    font-size: 48px;
+  }
+
+  &.md-dark {
+    color: rgba(0, 0, 0, 0.54);
+  }
+
+  &.md-clickable {
+    cursor: pointer;
+  }
+}
