--- a/flashcards/src/app/components/user-options/user-options.component.html
+++ b/flashcards/src/app/components/user-options/user-options.component.html
@@ -1,1 +1,7 @@
-<h1>Options</h1>
+<h1>Filter</h1>
+
+<ul>
+  <li *ngFor="let tag of tags">
+    <mat-checkbox class="example-margin" [(ngModel)]="checked">{{ tag }}</mat-checkbox>
+  </li>
+</ul>
