--- a/flashcards/src/app/components/user-options-form/user-options-form.component.html
+++ b/flashcards/src/app/components/user-options-form/user-options-form.component.html
@@ -1,10 +1,16 @@
 <h1>Filter</h1>
 
-<form #userOptionsForm="ngForm">
+<form>
   <ul>
     <li *ngFor="let filter of filterOptions">
-      {{ filter.isChecked }}
-      <mat-checkbox class="example-margin" name="filter-options" [(ngModel)]="filter.isChecked">{{ filter.value }}</mat-checkbox>
+      <mat-checkbox
+        class="example-margin"
+        name="{{ filter.value }}"
+        [ngModel]="filter.isChecked"
+        (ngModelChange)="onChange(filter.value, $event)"
+      >
+        {{ filter.value }}
+      </mat-checkbox>
     </li>
   </ul>
 </form>
