Move dialog component inside flashcard component

--- a/flashcards/src/app/components/flashcards/flashcards.component.html
+++ b/flashcards/src/app/components/flashcards/flashcards.component.html
@@ -1,3 +1,7 @@
+<div class="modal">
+  <app-dialog></app-dialog>
+</div>
+
 <div class="flashcard">
   <div *ngIf="cards.length" class="content">
     <div class="index">
