Move dialog component content to flashcard component
...then remove unnecessary dialog component

--- a/flashcards/src/app/components/flashcards/flashcards.component.html
+++ b/flashcards/src/app/components/flashcards/flashcards.component.html
@@ -1,5 +1,5 @@
 <div class="modal">
-  <app-dialog></app-dialog>
+  <i class="material-icons md-48 md-dark md-clickable" (click)="openDialog()">settings</i>
 </div>
 
 <div class="flashcard">
