--- a/flashcards/src/app/components/app.component.html
+++ b/flashcards/src/app/components/app.component.html
@@ -1,3 +1,3 @@
-<div class="container">
+<div id="container" [className]="isNightMode ? 'night-mode' : ''">
   <app-flashcards></app-flashcards>
 </div>
