--- a/flashcards/src/app/components/app.component.html
+++ b/flashcards/src/app/components/app.component.html
@@ -1,3 +1,3 @@
-<div id="container" [className]="isNightMode ? 'night-mode' : ''">
+<div id="container" [class.night-mode]="isNightMode">
   <app-flashcards></app-flashcards>
 </div>
