Apply temporary styles so I can deploy this thing

--- a/flashcards/src/app/components/flashcards/flashcards.component.html
+++ b/flashcards/src/app/components/flashcards/flashcards.component.html
@@ -1,5 +1,5 @@
 <div class="modal">
-  <i class="material-icons md-48 md-dark md-clickable" (click)="openDialog()">settings</i>
+  <i class="material-icons md-48 md-clickable gear" (click)="openDialog()">settings</i>
 </div>
 
 <div class="flashcard">
