--- a/flashcards/src/app/components/flashcards/flashcards.component.scss
+++ b/flashcards/src/app/components/flashcards/flashcards.component.scss
@@ -2,6 +2,10 @@
   // height: 100vh;
 }
 
+.gear {
+  color: #666;
+}
+
 .content {
   color: #666;
   font-family: 'Trebuchet MS', Arial, Helvetica, sans-serif;
