Amend previous: update icon

--- a/flashcards/src/app/components/flashcards/flashcards.component.html
+++ b/flashcards/src/app/components/flashcards/flashcards.component.html
@@ -4,7 +4,7 @@
   </div>
 
   <div class="refresh">
-    <i class="material-icons md-48 md-clickable icon" (click)="getFlashcards()">filter_none</i>
+    <i class="material-icons md-48 md-clickable icon" (click)="getFlashcards()">layers</i>
   </div>
 </div>
 
