Start to import levels as filter; Make variable names more explicit before updating the filter algorithm

--- a/flashcards/src/app/components/user-options-form/user-options-form.component.html
+++ b/flashcards/src/app/components/user-options-form/user-options-form.component.html
@@ -3,7 +3,7 @@
     <h3 mat-dialog-title>Filters</h3>
 
     <ul>
-      <li *ngFor="let filter of filterOptions">
+      <li *ngFor="let filter of formFilterOptions">
         <mat-checkbox
           name="{{ filter.value }}"
           [ngModel]="filter.isChecked"
