--- a/flashcards/src/app/components/flashcards/flashcards.component.html
+++ b/flashcards/src/app/components/flashcards/flashcards.component.html
@@ -28,7 +28,11 @@
   <div *ngIf="!cards.length" class="content">
     <div class="translations">
       <div class="prompt">
-        Nope
+        Please select option for:
+      </div>
+
+      <div class="answer" [@answerState]="answerState">
+        {{ emptyFilters }}
       </div>
     </div>
   </div>
