Render verbs included next to each level in user options

--- a/flashcards/src/app/components/user-options-form/user-options-form.component.html
+++ b/flashcards/src/app/components/user-options-form/user-options-form.component.html
@@ -10,7 +10,7 @@
             [ngModel]="filter.isChecked"
             (ngModelChange)="onFilterChange(property, filter.value, $event)"
           >
-            {{ filter.value }}
+            {{ filter.value }} <span class="emphasis">{{ filter.description }}</span>
           </mat-checkbox>
         </li>
       </ul>
