--- a/flashcards/src/styles.scss
+++ b/flashcards/src/styles.scss
@@ -83,7 +83,7 @@ ul {
   text-transform: uppercase;
 }
 
-#container.night-mode {
+.night-mode #container {
   background: #000;
 
   .content .answer {
@@ -105,5 +105,10 @@ ul {
 
   .mat-checkbox-checked.mat-accent .mat-checkbox-background {
     background-color: #900;
+  }
+
+  button {
+    background-color: #900;
+    color: #171717;
   }
 }
