Add and style conjugation cues
...most of this done in the import conjugations from excel step

--- a/flashcards/src/app/components/flashcards/flashcards.component.html
+++ b/flashcards/src/app/components/flashcards/flashcards.component.html
@@ -13,6 +13,7 @@
     <div class="translations">
       <div class="prompt uppercase-first-letter">
         {{ card.translation.english }}
+        <div class="cue">{{ card.cues.english }}</div>
       </div>
 
       <div class="answer uppercase-first-letter" [@answerState]="answerState">
