--- a/flashcards/src/app/components/flashcards/flashcards.component.html
+++ b/flashcards/src/app/components/flashcards/flashcards.component.html
@@ -13,7 +13,7 @@
     <div class="translations">
       <div class="prompt uppercase-first-letter">
         {{ card.translation.english }}
-        <div class="cue">{{ card.cues.english }}</div>
+        <div class="cue">{{ card.cue.english }}</div>
       </div>
 
       <div class="answer uppercase-first-letter" [@answerState]="answerState">
