Fix no flashcards state error message

--- a/flashcards/src/app/components/flashcards/flashcards.component.html
+++ b/flashcards/src/app/components/flashcards/flashcards.component.html
@@ -32,7 +32,7 @@
         Please select option for:
       </div>
 
-      <div class="answer" [@answerState]="answerState">
+      <div class="answer">
         {{ emptyFilters }}
       </div>
     </div>
